# decentralised-storage-system

./: .gitignore  .gitlab-ci.yml  Bakalarka.postman_collection.json  README.md
.excluded/: README.md
LocationAppAndroidBatteryTest/: README.md
apps/: README.md
apps/excluded/: README.md
dataStorage/: .env  DataViewStoreHandler.js  index.js  package-lock.json  package.json
dataStorageSystem/: README.md  dataStorageSystemApi.postman_collection.json  decentralisedSystemEnvironment.postman_environment.json  docker-compose.yml
dataViewStore/: DataViewStore.js  README.md  index.js  package-lock.json  package.json
documentation/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
source_apps/: README.md
source_apps/activityTracker/activityTracker/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.hpp  ExistingSetupPage.cpp  ExistingSetupPage.hpp  InitialSetupPage.cpp  InitialSetupPage.hpp  JsonHelpers.hpp  MainApp.cpp  MainApp.hpp  MainFrame.cpp  MainFrame.hpp  MainFrame1.cpp  MainPage.cpp  MainPage.hpp  ScreenshotsManager.cpp  ScreenshotsManager.hpp  ScreenshotsThread.cpp  ScreenshotsThread.hpp  SettingsPage.cpp  SettingsPage.hpp  WindowInfo.hpp  WindowsAppsInfoManager.cpp  WindowsAppsInfoManager.hpp  activityTracker.cpp  activityTracker.h  activityTracker.vcxproj  activityTracker.vcxproj.filters  constants.hpp  dataStorageSetupNetworkHelpers.cpp  dataStorageSetupNetworkHelpers.hpp  generalHelpers.hpp  timeHelpers.hpp  windowsAppsInfoNetworkHelpers.cpp  windowsAppsInfoNetworkHelpers.hpp
transformerExampleModules/: otherJsToRequire.js
(+658 files in other folders)
